fix: pdf on mobile

--- a/styles/project/components/_menu.scss
+++ b/styles/project/components/_menu.scss
@@ -43,6 +43,10 @@ $animation-duration: .6s;
   background-color: transparent;
 
   &:hover {
+    @media (max-width: $screen-xs-max) {
+      background-color: $gray-lighter;
+    }
+
     @media (min-width: $screen-sm-min) {
       @include nav-link-active();
     }
